--- a/css/style2.css
+++ b/css/style2.css
@@ -69,6 +69,7 @@
             .main {
                 color:blue;
                 position:absolute;
-                left:25%;
+                left:15%;
                 margin:auto;
+                right:0;
             }
